# koda

./: CONTRIBUTING.md  Cargo.toml  GEMINI.md  PLANNING.md  README.md  ROADMAP.md  TODO.md
.github/workflows/: ci.yml  release.yml
src/: gui.rs  lang.rs  lib.rs  main.rs
src/db/: mod.rs
src/ui/: mod.rs
test/: big.py  test.py
