[[bin]]
name = "koda-gui"
path = "src/gui.rs"

[package]
name = "koda"
version = "1.0.0-beta"
authors = ["Teo <teo.hurtado.16@gmail.com>"]
edition = "2026"
description = "A lightweight, universal database viewer for SQL databases (CLI, TUI, and GUI)."
repository = "https://github.com/TeoDev1611/koda"
license = "MIT"
keywords = ["database", "sql", "viewer", "egui", "ratatui"]
categories = ["development-tools::database"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "any"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Tables/Formatting
tabled = "0.17"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Colors / Syntax Highlighting
colored = "2.0"
colored_json = "4.0"

# Time
chrono = "0.4"

# Environment variables (for DB URLs)
dotenvy = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI
eframe = "0.29"
rfd = "0.17.2"
